<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".TranscriptionActivity"
    tools:showIn="@layout/activity_transcript">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <ImageButton
            android:id="@+id/ibMic"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/ibMicDescription"
            android:scaleType="fitCenter"
            android:src="@drawable/ib_mic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tvTranscriptionRes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/transcriptionDefault"
            android:textSize="@dimen/tvTranscriptionSize"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ibMic"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <RadioGroup
        android:id="@+id/rgTranscriptionStrategy"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <TextView
            android:id="@+id/tvTranscriptionStrategy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvTranscriptionStrategy"
            android:layout_marginBottom="@dimen/defaultMargin"
            android:textSize="@dimen/defaultSubTitleSize"/>

        <RadioButton
            android:id="@+id/rbPlainText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbPlainText"
            android:textSize="@dimen/defaultSubTitleSize"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/rbAlphanumeric"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbAlphanumeric"
            android:textSize="@dimen/defaultSubTitleSize"/>

    </RadioGroup>

    <RadioGroup
        android:id="@+id/rgLanguage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgTranscriptionStrategy">

        <TextView
            android:id="@+id/tvLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/defaultMargin"
            android:text="@string/tvLanguage"
            android:textSize="@dimen/defaultSubTitleSize" />

        <RadioButton
            android:id="@+id/rbUs_us"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbUs_us"
            android:textSize="@dimen/defaultSubTitleSize"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/rbUs_uk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbUs_uk"
            android:textSize="@dimen/defaultSubTitleSize"/>

        <RadioButton
            android:id="@+id/rbPt_br"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbPt_br"
            android:textSize="@dimen/defaultSubTitleSize"/>

    </RadioGroup>


</android.support.constraint.ConstraintLayout>